Tyhjää TileId:tä ei piirretä

--- a/Gravity/Gravity.csproj
+++ b/Gravity/Gravity.csproj
@@ -23,6 +23,9 @@
     <None Update="Map\Colormap2x2.tsx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Map\room.tmj">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Map\testmap.tmj">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
